--- a/css/custom.css
+++ b/css/custom.css
@@ -58,31 +58,31 @@ h3 {
   letter-spacing: 10px;
 }
 
-.modal {
-    position: fixed; /* Stay in place */
+/* The Modal (background) */
+.modalContainer {
+    position: absolute; /* Stay in place */
     z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
+    left: 30%;
+    top: 37%;
+    width: 45%; /* Full width */
+    height: 45%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-/* Modal Content */
-.box-content {
+/* Modal Content/Box */
+.modal-content {
     background-color: #fefefe;
-    margin: auto;
+    margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
-    width: 45%;
+    width: 80%; /* Could be more or less, depending on screen size */
 }
 
 /* The Close Button */
 .close {
-    color: #aaaaaa;
+    color: #aaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
@@ -90,7 +90,7 @@ h3 {
 
 .close:hover,
 .close:focus {
-    color: #000;
+    color: black;
     text-decoration: none;
     cursor: pointer;
 }
